# lcw

./: .gitignore  CMakeLists.txt  LCWConfig.cmake.in  README.md  format.sh  liblcw.pc.in
.github/workflows/: ci.yml
cmake_modules/: AddLCW.cmake
contrib/spack/: repo.yaml
doc/: changelog_0_1.md
examples/: CMakeLists.txt  comm_exp.hpp  hello_world.cpp  pingpong_mt.cpp
examples/mpi/: CMakeLists.txt  mpi_hello_world.cpp
src/: CMakeLists.txt  env.cpp  env.hpp  lcw.cpp  lcwi.hpp
src/api/: CMakeLists.txt  lcw.hpp  lcw_config.hpp.in
src/backend/: backend.cpp  backend.hpp
src/backend/gex/: backend_gex.cpp  backend_gex.hpp
src/backend/lci/: backend_lci.cpp  backend_lci.hpp
src/backend/lci2/: backend_lci2.cpp  backend_lci2.hpp
src/backend/mpi/: backend_mpi.cpp  backend_mpi.hpp  bigcount_wrapper.hpp
src/backend/mpi/comp_manager/: manager_base.hpp  manager_cont.cpp  manager_cont.hpp  manager_req.cpp  manager_req.hpp
src/comp/: comp_base.hpp
src/comp/cq/: cq.cpp
src/comp/handler/: handler.cpp
src/logger/: logger.cpp  logger.hpp
src/util/: pcounter.cpp  pcounter.hpp  spinlock.cpp  spinlock.hpp
